--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width:1200px){
 
 }
-@media only screen and (max-width:992px){
+/* @media only screen and (max-width:992px){
     .video_modal .video_modal-center iframe{
         width: 700px;
         height: 350px;
@@ -15,8 +15,8 @@
     .video .text-vd  p:nth-of-type(1){
         font-size: 25px!important;
     }
-}
-@media only screen and (max-width:768px){
+} */
+@media only screen and (max-width:899px){
     body{
         font-size: 10px;
     }
@@ -40,15 +40,15 @@
         font-size: 10px;
     }
     #banner .image .title_img h1{
-        font-size: 13px!important;
+        font-size: 10px!important;
     }
     #banner .image .title_img .btn_view {
         margin-top: 10px!important;
         display: flex;
     }
     #banner .image .title_img .btn_view button {
-        width: 62px!important;
-        height: 25px!important;
+        width: 85px!important;
+        height: 30px!important;
         margin-right: 5px;
     }
     #banner .image .title_img .btn_view button a {
@@ -71,14 +71,14 @@
         min-width: 66.66%;
     }
     .product .product__right .product__item-wrapp .product__item.col-md-3 {
-        flex: 0 0 33.33%;
-        min-width: 33.33%;
+        flex: 0 0 50%;
+        min-width: 50%;
     }
     .product .product__right .product__item .sale{
         top: 0!important;
     }
     .product .product__right .img_sale-bottom .img_news {
-        height: 150px;
+        height: 92px;
     }
     .product .product__right .img_sale-bottom .img_news a{
         height: 100%;
@@ -86,11 +86,20 @@
     .product .product__right .img_sale-bottom img {
         height: 100%;
     }
-    .product .product__right .img_sale-bottom .img_news .txt_news h1{
-        font-size: 18px!important;
+    .product .product__right .img_sale-bottom .img_news .txt_news {
+        flex-direction: row!important;
     }
-    .product .product__right .img_sale-bottom .txt_news input {
-        width: 60%;
+    .product .product__right .img_sale-bottom .img_news .txt_news .txt_sale{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .product .product__right .img_sale-bottom .img_news .txt_news h1{
+        font-size: 15px!important;
+    }
+    .product .product__right .img_sale-bottom .txt_news .ip_bt {
+        height: 30px!important;
     }
     .product .product__right .img_sale-bottom .txt_news button.ip_bt {
         width: 70px;    
@@ -104,10 +113,22 @@
     .product .product__right .product__item .row_product .info__product {
         padding: 0px 0px 0px 4px!important;
     }
+    .product .product__item .info__product .category__product {
+        font-size: 10px!important;
+    }
+    .product .product__item .info__product .name__product {
+        font-size: 9px!important;
+    }
+    .product .product__item .info__product .price__product {
+        font-size: 12px!important;
+    }
     .product .product__right .product__item .sale {
         width: 30px!important;
         height: 15px!important;
         font-size: 7px!important;
+    }
+    .product .product__right .product__item .box-img img {
+        width: 80%!important;
     }
     .product .col_img-sale .calendar-sale {
         height: 40px!important;
@@ -143,7 +164,7 @@
         height: 300px;
     }
 }
-@media only screen and (max-width:576px){
+@media only screen and (max-width:768px){
     .product #product-wrap .product__left {
         flex: 0 0 100%;
         min-width: 100%;
@@ -163,6 +184,10 @@
         min-width: 100%;
         padding-left: 0;
         padding-top: 10px;
+    }
+    .product .product__right .img_sale-bottom {
+        padding-top: 10px;
+        position: static!important;
     }
     .product .col_img-sale .box_img-sale {
         position: relative;
@@ -189,10 +214,12 @@
         max-width: 50%;
     }
 }
-@media only screen and (max-width:475px){
+@media only screen and (max-width:600px){
     .product .product__right .product__item .row_product .col-sm-6 {
         width: 50%;
     }
+}
+@media only screen and (max-width:480px){
     .product .col_img-sale .box_img-sale {
         position: relative;
         height: 190px!important;
@@ -207,10 +234,6 @@
     .product .product__right .product__item-wrapp .product__item.col-md-3 {
         flex: 0 0 50%;
         min-width: 50%;
-    }
-    .product .product__right .img_sale-bottom {
-        padding-top: 10px;
-        position: static!important;
     }
     .video .text-vd  p:nth-of-type(1){
         font-size: 15px!important;
