--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,7 +1,12 @@
 @media only screen and (max-width:1200px){
-
+    .product .product__left .box__product .owl-prev {
+        left: 30%!important;
+    }
+    .product .product__left .box__product .owl-next {
+        right: 30%!important;
+    }
 }
-/* @media only screen and (max-width:992px){
+@media only screen and (max-width:1024px){
     .video_modal .video_modal-center iframe{
         width: 700px;
         height: 350px;
@@ -15,7 +20,64 @@
     .video .text-vd  p:nth-of-type(1){
         font-size: 25px!important;
     }
-} */
+    #header #logo{
+        width: 120px;
+    }
+    #header #logo img{
+        width: 100%;
+    }
+    #header .header__mid{
+        margin-left: 20px;
+    }
+    #header-top .header__mid .price_products span{
+        padding: 0 10px;
+    }
+    #header-bottom .home__menu span{
+        font-size: 12px;
+    }
+    #header-bottom .header__menu {
+        flex: 0 0 75%;
+        max-width: 75%;
+    }
+    #header-bottom .header__menu .header__menu-list li a{
+        font-size: 12px;
+    }
+    #banner .image .title_img h1 {
+        font-size: 1.5em!important;
+    }
+    .product .product__right .img_sale img {
+        height: 200px;
+    }
+    .product #product-wrap .product__left {
+        padding-right: 0;
+        flex: 0 0 33.33%;
+        min-width: 33.33%;
+    }
+    .product .product__right {
+        padding-right: 0;
+        flex: 0 0 66.66%;
+        min-width: 66.66%;
+    }
+    .product__right .product__item-wrapp .product__item.col-md-3 {
+        flex: 0 0 33.33%;
+        min-width: 33.33%;
+    }
+    .product .tab__list li {
+        font-size: 15px!important;
+    }
+    .product .product__right .img_sale-bottom .img_news .txt_news {
+        flex-direction: row!important;
+    }
+    .product .product__right .img_sale-bottom .img_news .txt_news .txt_sale{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .container{
+        max-width: 850px!important;
+    }
+}
 @media only screen and (max-width:899px){
     body{
         font-size: 10px;
@@ -59,12 +121,6 @@
         flex: 0 0 33.33%;
         min-width: 33.33%;
     }
-    .product .product__left .box__product .brands {
-        padding: 10px 0px!important;
-    }
-    .product .product__left .box__product .brands_1 {
-        padding: 10px 0px!important;
-    }
     .product .product__right {
         padding-right: 0;
         flex: 0 0 66.66%;
@@ -86,7 +142,7 @@
     .product .product__right .img_sale-bottom img {
         height: 100%;
     }
-    .product .product__right .img_sale-bottom .img_news .txt_news {
+    /* .product .product__right .img_sale-bottom .img_news .txt_news {
         flex-direction: row!important;
     }
     .product .product__right .img_sale-bottom .img_news .txt_news .txt_sale{
@@ -94,7 +150,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-    }
+    } */
     .product .product__right .img_sale-bottom .img_news .txt_news h1{
         font-size: 15px!important;
     }
@@ -127,8 +183,12 @@
         height: 15px!important;
         font-size: 7px!important;
     }
-    .product .product__right .product__item .box-img img {
+    /* .product .product__right .product__item .box-img img {
         width: 80%!important;
+    } */
+    .product .product__right .img_sale-bottom {
+        padding-top: 10px;
+        position: static!important;
     }
     .product .col_img-sale .calendar-sale {
         height: 40px!important;
@@ -151,13 +211,13 @@
         width: 30%!important;
     }
     .owl-carousel .owl-nav > button {
-        width: 20px!important;
-        height: 20px!important;
+        width: 30px!important;
+        height: 30px!important;
     }
     .img_carousel .owl-nav .owl-prev ,
     .img_carousel .owl-nav .owl-next
     {
-        top: -27px!important;
+        top: -35px!important;
     }
     .video_modal .video_modal-center iframe{
         width: 500px;
@@ -179,19 +239,36 @@
     .product .product__left .product__item:nth-child(3) {
         border-bottom: none;
     }
+    .product .product__left .box-sale a{
+        display: block;
+        text-align: center;
+    }
+    .product .product__left .box-sale img {
+        width: 30%!important;
+        height: 100%!important;
+    }
+    .product .product__right .product__item .box-img img {
+        width: 80%!important;
+    }
     .product .product__right {
         flex: 0 0 100%;
         min-width: 100%;
         padding-left: 0;
         padding-top: 10px;
     }
-    .product .product__right .img_sale-bottom {
+    /* .product .product__right .img_sale-bottom {
         padding-top: 10px;
         position: static!important;
-    }
+    } */
     .product .col_img-sale .box_img-sale {
         position: relative;
         height: 200px!important;
+    }
+    .product .product__right .product__item #img_main{
+        text-align: center;
+    }
+    .product .product__right .product__item #img_main img {
+        width: 50%!important;
     }
     .product .col_img-sale {
         padding-right: 5px!important;
