--- a/styles/header.css
+++ b/styles/header.css
@@ -78,5 +78,49 @@
     display: flex;
     justify-content: space-between;
     height: 100%;
+}
+#header-bottom .header__menu .item-menu{
+    position: relative;
+    display: flex;
     align-items: center;
+    height: 100%;
+}
+#header-bottom .header__menu .item-menu:hover .sub-menu{
+    opacity: 1;
+}
+/* #header-bottom .header__menu .item-menu a{
+    padding: 0px 15px;
+} */
+#header-bottom .header__menu .item-menu .sub-menu{
+    position: absolute;
+    top: calc(100%);
+    left: 0;
+    z-index: 2;
+    background-color: #fff;
+    box-shadow: 0px 3px 4px #ccc;
+    min-width: 400px;
+    opacity: 0;
+    transition: opacity .5s;
+    padding: 10px;
+}
+#header-bottom .header__menu .item-menu .sub-menu:before{
+    content: "";
+    position: absolute;
+    top: -10px;
+    left: 10%;
+    border-bottom: 8px solid #e7e7e7;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+}
+.header__menu .item-menu .sub-menu .menu-item{
+    width: 33.33%;
+    float: left;
+    padding: 6px;
+}
+.header__menu .item-menu .sub-menu .menu-item:hover{
+    background-color: #e7e7e7;
+    border-radius: 5px;
+}
+.header__menu .item-menu .sub-menu .menu-item:hover a{
+    color: #3f3f3f!important;
 }
