--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,5 +1,10 @@
 #header__pc{
     display: none;
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    width: 100%;
+    background-color: #fff;
 }
 #header__pc .header__pc-wrap{
     position: relative;
@@ -30,8 +35,8 @@
     color: #40bea7;
 }
 #header__pc .menu__mobile{
-    position: absolute;
-    top: calc(100%);
+    position: fixed;
+    top: 50px;
     left: -100%;
     width: 100%;
     height: 100vh;
@@ -44,8 +49,16 @@
     width: 90%;
 }
 #header__pc .menu__mobile .list__menu .item-menu{
+    position: relative;
     border-bottom: 1px solid #ccc;
-    padding: 5px 12px;
+}
+#header__pc .menu__mobile > .list__menu > .item-menu > span{
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    width: 20px;
+    height: 20px;
+    text-align: center;
 }
 #header__pc .menu__mobile .list__menu .item-menu:last-child{
     position: absolute;
@@ -72,26 +85,51 @@
     align-items: center;
     font-size: 20px;
 }
-#header__pc .menu__mobile .list__menu .item-menu:hover{
-    background-color: #f7f7f7;
-}
+
 #header__pc .menu__mobile .list__menu a{
-    padding: 5px 0;
-    font-size: 12px;
-    font-weight: 500;
-    color: #3f3f3f;
+    padding: 8px 12px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #464646;
     display: flex;
-    align-items: center;
-    position: relative;
 }
 #header__pc .menu__mobile .list__menu a i.icon_f{
     padding-right: 8px;
     width: 30px;
     font-size: 20px!important;
-    color: #e51f28;
+    color: #40bea7;
     position: relative;
 }
 #header__pc .menu__mobile .list__menu a img{
     position: absolute;
     right: 15px;
+}
+/* #header__pc .menu__mobile .list__menu .item-menu .sub-menu{
+    padding-left: 27px;
+} */
+#header__pc .menu__mobile .list__menu .sub-menu{
+    display: none;
+}
+#header__pc .menu__mobile .list__menu .sub-menu li:first-child{
+    border-top: 1px solid #ccc;
+}
+#header__pc .menu__mobile .list__menu .sub-menu li{
+    border-bottom: 1px solid #ccc;
+}
+#header__pc .menu__mobile .list__menu .sub-menu li a:hover{
+    background-color: #ccc;
+}
+#header__pc .menu__mobile .list__menu .sub-menu li:last-child{
+    border-bottom: none;
+}
+#header__pc .menu__mobile .list__menu .sub-menu li a{
+    padding-left: 42px;
+    color: #464646;
+    font-size: 13px;
+}
+.rotate{
+    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
 }
