--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,12 +1,18 @@
 @media only screen and (max-width:1200px){
-    .product .product__left .box__product .owl-prev {
+    /* .product .product__left .box__product .owl-prev {
         left: 30%!important;
     }
     .product .product__left .box__product .owl-next {
         right: 30%!important;
+    } */
+    #header-bottom .header__menu .item-menu a{
+        font-size: 14px;
     }
 }
 @media only screen and (max-width:1024px){
+    #header-bottom .header__menu .item-menu .sub-menu{
+        min-width: 350px;
+    }
     .video_modal .video_modal-center iframe{
         width: 700px;
         height: 350px;
@@ -87,6 +93,9 @@
     }
     .nav__wrap , #header{
         display: none;
+    }
+    #banner{
+        margin-top: 50px;
     }
     #banner .image .title_img {
         position: absolute;
@@ -169,23 +178,11 @@
     .product .product__right .product__item .row_product .info__product {
         padding: 0px 0px 0px 4px!important;
     }
-    .product .product__item .info__product .category__product {
-        font-size: 10px!important;
-    }
-    .product .product__item .info__product .name__product {
-        font-size: 9px!important;
-    }
-    .product .product__item .info__product .price__product {
-        font-size: 12px!important;
-    }
     .product .product__right .product__item .sale {
         width: 30px!important;
         height: 15px!important;
         font-size: 7px!important;
     }
-    /* .product .product__right .product__item .box-img img {
-        width: 80%!important;
-    } */
     .product .product__right .img_sale-bottom {
         padding-top: 10px;
         position: static!important;
@@ -210,10 +207,10 @@
     #footer .logo_footer-center .logo-bottom:after {
         width: 30%!important;
     }
-    .owl-carousel .owl-nav > button {
+    /* .owl-carousel .owl-nav > button {
         width: 30px!important;
         height: 30px!important;
-    }
+    } */
     .img_carousel .owl-nav .owl-prev ,
     .img_carousel .owl-nav .owl-next
     {
@@ -279,6 +276,16 @@
     .product .product__list li {
         font-size: 15px;
     }
+    .product .product__left .box__product .owl-prev {
+        left: 30%!important;
+    }
+    .product .product__left .box__product .owl-next {
+        right: 30%!important;
+    }
+    .owl-carousel .owl-nav > button {
+        width: 30px!important;
+        height: 30px!important;
+    }
     .video .text-vd  p:nth-of-type(1){
         font-size: 20px!important;
     }
@@ -333,6 +340,12 @@
     }
     .product .product__right .product__item .row_product .col-sm-6 {
         width: 100%;
+    }
+    .product .product__left .box__product .owl-prev {
+        left: 37%!important;
+    }
+    .product .product__left .box__product .owl-next {
+        right: 37%!important;
     }
     #footer .row .col-sm-3{
         flex: 0 0 100%;
