--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,9 @@
 @import url("banner.css");
 @import url("products.css");
 @import url("slider.css");
+@import url("mobile.css");
 @import url("footer.css");
-a{text-decoration: none!important;height: 100%;}
+a{text-decoration: none!important;}
 .active_1{color: #40bea7!important;font-weight: 600;}
 .active_btn{color: #fff;font-weight: 600;background-color: #3f3f3f;}
 .mg{margin: 0!important;}
@@ -58,16 +59,11 @@ input:focus , button:focus{
     border-radius: 50%;
     display: none;
 }
-/* *********END*********** */
-.sticky {
-    height: 50px;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 9;
-    background-color: #fff;
-    box-shadow: 0px 0px 5px #383838;
+.back-to-top i{
+    font-size: 20px;
 }
+/* *********END*********** */
+
 
 .video_modal{
     position: fixed;
