--- a/styles/products.css
+++ b/styles/products.css
@@ -6,8 +6,8 @@
     width: 100%;
     height: auto;
 }
-.product{
-    margin-top: 30px;
+.product_hot{
+    padding:15px 0px;
     font-family: 'Times New Roman', Times, serif;
 }
 .product #product-wrap{
@@ -24,7 +24,7 @@
 }
 .product .product__left .box__product{
     border: 1px solid #e6e6e6;
-    padding: 0px 15px 15px 15px;
+    padding: 15px;
 }
 .product .product__left .box__product  .p_1{
     max-height: 190px;
@@ -34,10 +34,7 @@
     padding-bottom: 30px;
 }
 .product .product__left .box__product .brands{
-    padding: 10px 10px 10px 0;
-}
-.product .product__left .box__product .brands_1{
-    padding: 10px 0px 10px 10px;
+    padding:5px;
 }
 .product .product__left .box__product .row img{
     width: 100%;
@@ -64,7 +61,7 @@
 }
 .product .product__left .product__item{
     display: flex;
-    padding: 20px 0px;
+    padding: 15px 0px;
     border-bottom: 1px solid #e6e6e6;
 }
 .product .product__left .box__product .product__item:last-child{
@@ -80,6 +77,7 @@
 .product .product__item .info__product .name__product{
     color: #535353;
     font-size: 15px;
+    font-weight: 600;
 }
 .product .product__item .info__product .price__product{
     color: #3f3f3f;
@@ -109,9 +107,6 @@
 .product .product__right .title_product-right{
     padding: 0 15px;
 }
-.product .product__right .product__item-wrapp{
-    padding-top: 25px;
-}
 .product .product__right .img_sale img{
     width: 100%;
 }
@@ -127,6 +122,10 @@
     justify-content: center;
     text-align: center;
     width: 100%;    
+}
+.product .product__right .img_sale-bottom .img_news .txt_news h1{
+    font-size: 25px;
+    font-weight: 600;    
 }
 .product .product__right .img_sale-bottom  .txt_news input{
     width: 70%; 
@@ -157,7 +156,7 @@
 }
 .product  .tab__list{
     border-bottom: 1px solid #ccc;
-    padding: 8px 0px;
+    padding: 10px 0px;
     position: relative;
 }
 .product  .tab__list li{
@@ -186,7 +185,7 @@
     position: relative;
 }
 .product .product__right .product__item .row_product .col-sm-6{
-    padding-bottom: 22px;
+    padding: 15px;
     /* height: 122px; */
 }
 .product .product__right .product__item .row_product .info__product{
