--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,10 +1,4 @@
 @media only screen and (max-width:1200px){
-    /* .product .product__left .box__product .owl-prev {
-        left: 30%!important;
-    }
-    .product .product__left .box__product .owl-next {
-        right: 30%!important;
-    } */
     #header-bottom .header__menu .item-menu a{
         font-size: 14px;
     }
@@ -51,9 +45,6 @@
     #banner .image .title_img h1 {
         font-size: 1.5em!important;
     }
-    .product .product__right .img_sale img {
-        height: 200px;
-    }
     .product #product-wrap .product__left {
         padding-right: 0;
         flex: 0 0 33.33%;
@@ -69,25 +60,13 @@
         min-width: 33.33%;
     }
     .product .tab__list li {
-        font-size: 15px!important;
-    }
-    .product .product__right .img_sale-bottom .img_news .txt_news {
-        flex-direction: row!important;
-    }
-    .product .product__right .img_sale-bottom .img_news .txt_news .txt_sale{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
+        font-size: 14px!important;
     }
     .container{
         max-width: 850px!important;
     }
 }
 @media only screen and (max-width:899px){
-    body{
-        font-size: 10px;
-    }
     #header__pc{
         display: block!important;
     }
@@ -97,33 +76,9 @@
     #banner{
         margin-top: 50px;
     }
-    #banner .image .title_img {
-        position: absolute;
-        top: 15%;
-        left: 9%;
-    }
-    #banner .image .title_img {
-        position: absolute;
-        top: 15%;
-        left: 9%;
-    }
-    #banner .image .title_img h4{
-        font-size: 10px;
-    }
-    #banner .image .title_img h1{
-        font-size: 10px!important;
-    }
     #banner .image .title_img .btn_view {
         margin-top: 10px!important;
         display: flex;
-    }
-    #banner .image .title_img .btn_view button {
-        width: 85px!important;
-        height: 30px!important;
-        margin-right: 5px;
-    }
-    #banner .image .title_img .btn_view button a {
-        font-size: 8px;
     }
     .product #product-wrap .product__left {
         padding-right: 0;
@@ -136,14 +91,11 @@
         min-width: 66.66%;
     }
     .product .product__right .product__item-wrapp .product__item.col-md-3 {
-        flex: 0 0 50%;
-        min-width: 50%;
+        flex: 0 0 33.33%;
+        min-width: 33.33%;
     }
     .product .product__right .product__item .sale{
         top: 0!important;
-    }
-    .product .product__right .img_sale-bottom .img_news {
-        height: 92px;
     }
     .product .product__right .img_sale-bottom .img_news a{
         height: 100%;
@@ -151,15 +103,6 @@
     .product .product__right .img_sale-bottom img {
         height: 100%;
     }
-    /* .product .product__right .img_sale-bottom .img_news .txt_news {
-        flex-direction: row!important;
-    }
-    .product .product__right .img_sale-bottom .img_news .txt_news .txt_sale{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    } */
     .product .product__right .img_sale-bottom .img_news .txt_news h1{
         font-size: 15px!important;
     }
@@ -183,14 +126,10 @@
         height: 15px!important;
         font-size: 7px!important;
     }
-    .product .product__right .img_sale-bottom {
+    /* .product .product__right .img_sale-bottom {
         padding-top: 10px;
         position: static!important;
-    }
-    .product .col_img-sale .calendar-sale {
-        height: 40px!important;
-        width: 40px!important;
-    }
+    } */
     .video img{
         width: 100%;
     }
@@ -222,6 +161,19 @@
     }
 }
 @media only screen and (max-width:768px){
+    #banner .image .title_img h4{
+        font-size: 13px;
+    }
+    #banner .image .title_img h1{
+        font-size: 17px!important;
+    }
+    #banner .image .title_img .btn_view button {
+        width: 100px!important;
+        height: 30px!important;
+    }
+    #banner .image .title_img .btn_view button a {
+        font-size: 8px;
+    }
     .product #product-wrap .product__left {
         flex: 0 0 100%;
         min-width: 100%;
@@ -253,22 +205,11 @@
         padding-left: 0;
         padding-top: 10px;
     }
-    /* .product .product__right .img_sale-bottom {
-        padding-top: 10px;
-        position: static!important;
-    } */
-    .product .col_img-sale .box_img-sale {
-        position: relative;
-        height: 200px!important;
-    }
     .product .product__right .product__item #img_main{
         text-align: center;
     }
     .product .product__right .product__item #img_main img {
         width: 50%!important;
-    }
-    .product .col_img-sale {
-        padding-right: 5px!important;
     }
     .product .product__list {
         padding: 15px 0px!important;
@@ -276,38 +217,51 @@
     .product .product__list li {
         font-size: 15px;
     }
-    .product .product__left .box__product .owl-prev {
-        left: 30%!important;
+    .product .product__right .img_sale-bottom {
+        padding-top: 10px;
+        position: static!important;
     }
-    .product .product__left .box__product .owl-next {
-        right: 30%!important;
-    }
-    .owl-carousel .owl-nav > button {
-        width: 30px!important;
-        height: 30px!important;
+    .owl-carousel .owl-nav > button span {
+        font-size: 19px;
     }
     .video .text-vd  p:nth-of-type(1){
         font-size: 20px!important;
     }
     .product .product__left .box__product .brands,
     .product .product__left .box__product .brands_1 {
-        width: 50%;
+        flex: 0 0 33.33%;
+        max-width: 33.33%;
     }
     #footer .row .col-sm-3{
         flex: 0 0 50%;
         max-width: 50%;
     }
 }
+@media only screen and (max-width:667px){
+    #banner .image .title_img{
+        top: 10%!important;
+        width: 50%;
+    }
+    #banner .image .title_img > p{
+        height: 42px;
+        overflow: hidden;
+    }
+}
 @media only screen and (max-width:600px){
     .product .product__right .product__item .row_product .col-sm-6 {
         width: 50%;
     }
-}
-@media only screen and (max-width:480px){
-    .product .col_img-sale .box_img-sale {
-        position: relative;
-        height: 190px!important;
+    .product .col_img-sale .calendar-sale span.date-sale {
+        font-size: 15px!important;
     }
+    .product .product__right .img_sale-bottom .img_news .txt_news p{
+        font-size: 15px!important;
+    }
+    .product .product__right .product__item-wrapp .col-md-4{
+       border-bottom: 1px solid #ccc;
+    }
+} 
+@media only screen and (max-width:480px){
     .product .product__right .product__item .row_product .col-sm-6{
         padding: 15px;
         border-bottom: 1px solid #ccc;
@@ -316,19 +270,59 @@
         border-bottom: none;
     }
     .product .product__right .product__item-wrapp .product__item.col-md-3 {
-        flex: 0 0 50%;
-        min-width: 50%;
+        flex: 0 0 100%;
+        min-width: 100%;
+    }
+    .product .product__right .img_sale-bottom .img_news .txt_news h1 {
+        font-size: 12px!important;
+    }
+    .product .product__right .img_sale-bottom .img_news .txt_news p{
+        font-size: 12px!important;
+    }
+    #banner .image .title_img .btn_view button {
+        width: 65px!important;
+        height: 25px!important;
+        margin-right: 5px;
+        border-width: 0px;
+    }
+    /* #banner .image .title_img{
+        top: 10%!important;
+        width: 50%;
+    } */
+    #banner .image .title_img > p{
+        height: 30px!important;
+        overflow: hidden;
     }
     .video .text-vd  p:nth-of-type(1){
         font-size: 15px!important;
+    }
+    .video{
+        height: 120px;
+    }
+    .video img {
+        height: 100%;
     }
     #footer .logo_footer-center .logo-bottom:before,
     #footer .logo_footer-center .logo-bottom:after {
         width: 25%!important;
     }
+    #footer .row .col-sm-3{
+        flex: 0 0 100%;
+        max-width: 100%;
+        border-bottom: 1px solid #ccc;
+        padding: 10px 0px;
+    }
     .video_modal .video_modal-center iframe{
         width: 350px;
         height: 250px;
+    }
+}
+@media only screen and (max-width:425px){
+    #banner .image .title_img h4{
+        font-size: 10px!important;
+    }
+    #banner .image .title_img h1{
+        font-size: 10px!important;
     }
 }
 @media only screen and (max-width:375px){
@@ -341,16 +335,13 @@
     .product .product__right .product__item .row_product .col-sm-6 {
         width: 100%;
     }
-    .product .product__left .box__product .owl-prev {
-        left: 37%!important;
+    .product .product__right .img_sale-bottom .img_news {
+        height: 150px;
     }
-    .product .product__left .box__product .owl-next {
-        right: 37%!important;
-    }
-    #footer .row .col-sm-3{
+    /* #footer .row .col-sm-3{
         flex: 0 0 100%;
         max-width: 100%;
-    }
+    } */
     #footer .logo_footer-center .logo-bottom:before,
     #footer .logo_footer-center .logo-bottom:after {
         width: 20%!important;
